Add tests for campaign service layer.